--- a/apoiadores.html
+++ b/apoiadores.html
@@ -46,8 +46,8 @@
 		<div class="main-content">
 			<div class="about-staff">
 				<div class="abt-epr">
-					<h1 class="fade">Apoiadores</h1>
-					<p>As contribuições são de grande importancia para manter o nosso servidor de pé, cada VIP comprado ajuda a pagar os custos de host do servidor, hospedagem do site, dominio do site, plugins que estamos sempre comprado para melhorar a qualidade e diversão do servidor entre outros gastos que temos!</br></br><b><i>O meu muito obrigado aos que estão contribuindo.</br></br> Grande Abraço do TEK</i></b></b></b>.</p>
+					<h1 class="fade">HALL DA FAMA</h1>
+					<p>As contribuições são de grande importancia para manter o nosso servidor de pé, cada VIP comprado ajuda a pagar os custos de host do servidor, VPS do servidor, hospedagem do site, dominio do site, plugins que estamos sempre comprado para melhorar a qualidade e diversão do servidor entre outros gastos que temos!</br></br><b><i>O meu muito obrigado aos que estão contribuindo.</br></br> Grande Abraço do TEK</i></b></b></b>.</p>
 				</div>
 				<div class="prev-epr">
 
@@ -61,32 +61,32 @@
 					<div>
 						<h3>RaHorack</h3>
 						<div class="owner">1º VIP ULTRA</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="">
 					</div>
 
 
 					<div>
 						<h3>SrGananza</h3>
 						<div class="owner">2º VIP ULTRA</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="owner">3º VIP ULTRA</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="owner">4º VIP ULTRA</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="owner">5º VIP ULTRA</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="">
 					</div>
 				</div>
 			</div>
@@ -96,32 +96,32 @@
 					<div>
 						<h3>Em análise</h3>
 						<div class="manager">1º VIP SUPER</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="">
 					</div>
 
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="manager">2º VIP SUPER</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="manager">3º VIP SUPER</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="manager">4º VIP SUPER</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="manager">5º VIP SUPER</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="">
 					</div>
 				</div>
 			</div>
@@ -131,32 +131,32 @@
 					<div>
 						<h3>Em análise</h3>
 						<div class="admin">1º VIP</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="">
 					</div>
 
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="admin">2º VIP</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="admin">3º VIP</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="admin">4º VIP</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="admin">5º VIP</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="">
 					</div>
 				</div>
 			</div>		
