--- a/apoiadores.html
+++ b/apoiadores.html
@@ -61,27 +61,32 @@
 					<div>
 						<h3>RaHorack</h3>
 						<div class="owner">1º VIP ULTRA</div>
+						<img src="img/vip.png" />
 					</div>
 
 
 					<div>
 						<h3>SrGananza</h3>
 						<div class="owner">2º VIP ULTRA</div>
+						<img src="img/vip.png" />
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="owner">3º VIP ULTRA</div>
+						<img src="img/vip.png" />
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="owner">4º VIP ULTRA</div>
+						<img src="img/vip.png" />
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="owner">5º VIP ULTRA</div>
+						<img src="img/vip.png" />
 					</div>
 				</div>
 			</div>
@@ -91,27 +96,32 @@
 					<div>
 						<h3>Em análise</h3>
 						<div class="manager">1º VIP SUPER</div>
+						<img src="img/vip.png" />
 					</div>
 
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="manager">2º VIP SUPER</div>
+						<img src="img/vip.png" />
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="manager">3º VIP SUPER</div>
+						<img src="img/vip.png" />
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="manager">4º VIP SUPER</div>
+						<img src="img/vip.png" />
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="manager">5º VIP SUPER</div>
+						<img src="img/vip.png" />
 					</div>
 				</div>
 			</div>
@@ -121,27 +131,32 @@
 					<div>
 						<h3>Em análise</h3>
 						<div class="admin">1º VIP</div>
+						<img src="img/vip.png" />
 					</div>
 
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="admin">2º VIP</div>
+						<img src="img/vip.png" />
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="admin">3º VIP</div>
+						<img src="img/vip.png" />
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="admin">4º VIP</div>
+						<img src="img/vip.png" />
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="admin">5º VIP</div>
+						<img src="img/vip.png" />
 					</div>
 				</div>
 			</div>		
