--- a/equipe.html
+++ b/equipe.html
@@ -79,32 +79,32 @@
 					<div>
 						<h3>TEKBRS</h3>
 						<div class="owner">Dono</div>
-						<img src="img/tek.png"  width="200px" height="400px">
+						<img src="img/staff.png"  width="200px" height="400px">
 					</div>
 
 
 					<div>
 						<h3>PORKALYPSE</h3>
 						<div class="manager">Moderador</div>
-						<img src="img/pork.png" width="200px" height="400px">
+						<img src="img/staff.png" width="200px" height="400px">
 					</div>
 
 					<div>
 						<h3>INDISPONÍVEL</h3>
 						<div class="manager">Moderador</div>
-						<img src="https://r.nmc1.net/skin/body.png?id=5f913bd41b769234&model=classic&width=120&height=240">
+						<img src="img/staff.png">
 					</div>
 
 					<div>
 						<h3>INDISPONÍVEL</h3>
 						<div class="admin">Ajudante</div>
-						<img src="https://r.nmc1.net/skin/body.png?id=5f913bd41b769234&model=classic&width=120&height=240">
+						<img src="img/staff.png">
 					</div>
 
 					<div>
 						<h3>INDISPONÍVEL</h3>
 						<div class="admin">Ajudante</div>
-						<img src="https://r.nmc1.net/skin/body.png?id=5f913bd41b769234&model=classic&width=120&height=240">
+						<img src="img/staff.png">
 					</div>
 				</div>
 			</div>
