--- a/equipe.html
+++ b/equipe.html
@@ -85,7 +85,7 @@
 
 					<div>
 						<h3>CucaAreka</h3>
-						<div class="manager">Moderador</div>
+						<div class="owner">Admin</div>
 						<img src="img/staff.png" width="275px" height="400px">
 					</div>
 
