--- a/equipe.html
+++ b/equipe.html
@@ -79,32 +79,32 @@
 					<div>
 						<h3>TEKBRS</h3>
 						<div class="owner">Dono</div>
-						<img src="img/staff.png"  width="275px" height="400px">
+						<img src="img/staff1111.png"  width="275px" height="400px">
 					</div>
 
 
 					<div>
 						<h3>CucaAreka</h3>
 						<div class="owner">Admin</div>
-						<img src="img/staff.png" width="275px" height="400px">
+						<img src="img/staff1111.png" width="275px" height="400px">
 					</div>
 
 					<div>
 						<h3>ZackT</h3>
 						<div class="manager">Moderador (Discord)</div>
-						<img src="img/staff.png" width="275px" height="400px">
+						<img src="img/staff2.png" width="275px" height="400px">
 					</div>
 
 					<div>
 						<h3>INDISPONÍVEL</h3>
 						<div class="admin">Ajudante</div>
-						<img src="img/staff.png" width="275px" height="400px">
+						<img src="img/staff3.png" width="275px" height="400px">
 					</div>
 
 					<div>
 						<h3>INDISPONÍVEL</h3>
 						<div class="admin">Ajudante</div>
-						<img src="img/staff.png" width="275px" height="400px">
+						<img src="img/staff3.png" width="275px" height="400px">
 					</div>
 				</div>
 			</div>
