--- a/equipe.html
+++ b/equipe.html
@@ -46,7 +46,7 @@
 			<div class="about-staff">
 				<div class="abt-epr">
 					<h1 class="fade">Nossa Equipe</h1>
-					<p>A equipe do MegaCraft é profissional e pronta para lhe dar a melhor experiência em nosso servidor. O dono é (TEKCRAFT). Toda a equipe se dedica constantemente a oferecer a você o melhor tempo possível no servidor. O proprietário trabalha em estreita colaboração com o resto da equipe de funcionários. Você vai nos ver online e pode entrar com o IP "<b><span class="ip">megacraftmc.com.br</span></b>".</p>
+					<p>Olá eu sou o TEK (TEKBRS), desenvolvi e sigo atualizando constantemente o servidor para oferecer a você a melhor diversão possível. Trabalho em estreita colaboração com o resto da equipe. Você me ver online e pode entrar com o IP "<b><span class="ip">megacraftmc.com.br</span></b>".</p>
 				</div>
 			</div>
 		</div>
