--- a/equipe.html
+++ b/equipe.html
@@ -46,7 +46,7 @@
 			<div class="about-staff">
 				<div class="abt-epr">
 					<h1 class="fade">Nossa Equipe</h1>
-					<p>Olá eu sou o TEK (TEKBRS), desenvolvi e sigo atualizando constantemente o servidor para oferecer a você a melhor diversão possível. Trabalho em estreita colaboração com o resto da equipe. Você me ver online e pode entrar com o IP "<b><span class="ip">megacraftmc.com.br</span></b>".</p>
+					<p>Olá eu sou o TEK (TEKBRS), desenvolvi o <strong>MEGACRAFT</strong> e sigo atualizando constantemente o servidor, seja plugins ou novos recursos, para oferecer a você a melhor diversão possível. Trabalho em estreita colaboração com o resto da equipe. Você me ver online e pode entrar com o IP "<b><span class="ip">megacraftmc.com.br</span></b>".</p>
 				</div>
 			</div>
 		</div>
