--- a/apoiadores.html
+++ b/apoiadores.html
@@ -72,7 +72,7 @@
 					</div>
 
 					<div>
-						<h3>Em análise</h3>
+						<h3>AyaseGasame</h3>
 						<div class="owner">3º VIP ULTRA</div>
 						<img src="img/vip.png" />
 					</div>
