--- a/regras.html
+++ b/regras.html
@@ -104,7 +104,7 @@
 <br /><br />
 <br /><br />		</div>
 		<footer>
-			<p>Copyright &copy; MEGACRAFT 2022</p>
+			<p>Copyright &copy; MegaCraft 2022 - <a href="https://discord.gg/xHtqBcCD" target="_blank">Discord</a> - <a href="apoiadores.html" >Apoiadores</a> - <a href="equipe.html" >Equipe</a></p>
 			<!-- Remove this part below if you want! -->
 			<p style="padding-right: 30px;">Desenvolvido por: <a href="https://discord.gg/xHtqBcCD" target="_blank">TEKBRS</a></p>
 		</footer>
