--- a/doar.html
+++ b/doar.html
@@ -63,7 +63,7 @@
 <br />
 		</div>
 		<footer>
-			<p>Copyright &copy; MEGACRAFT 2022</p>
+			<p>Copyright &copy; MegaCraft 2022 - <a href="https://discord.gg/xHtqBcCD" target="_blank">Discord</a> - <a href="apoiadores.html" >Apoiadores</a> - <a href="equipe.html" >Equipe</a></p>
 			<!-- Remove this part below if you want! -->
 			<p style="padding-right: 30px;">Desenvolvido por: <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
 		</footer>
