--- a/cores.html
+++ b/cores.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-	<title>Mega Craft - Tabela de Cores</title>
-	<meta name="description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'megacraftmc.com.br'.">
-	<meta name="keywords" content="MegaCraft, MegaCraftMC.com.br, Minecraft Server, Minecraft, Game, SlimeFun, Play, Towny, MCMMO, Oficial">
+	<title>Megacraft - Skyblock Server - Official Website</title>
+	<meta name="description" content="Megacraft - Skyblock World - IP 'megacraftmc.com.br'.">
+	<meta name="keywords" content="Megacraft, megacraft.com.br, Minecraft Server, Minecraft, Game, Skyblock, Sky, Play, Oficial">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:title" content="Mega Craft - Tabela de Cores">
-	<meta property="og:site_name" content="Mega Craft">
-	<meta property="og:description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'megacraftmc.com.br'.">
-	<meta property="og:image" content="https://megacraftmc.com.br/img/mcbanner.jpg">
+	<meta property="og:title" content="Megacraft - Skyblock World - Official Website">
+	<meta property="og:site_name" content="Megacraft">
+	<meta property="og:description" content="Megacraft - Skyblock World - IP 'megacraftmc.com.br'.">
+	<meta property="og:image" content="img/banner.jpg">
 	<meta property="og:url" content="https://bybilly.uk/">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta charset="utf-8">
@@ -198,7 +198,7 @@
 		</p>	
 		</div>
 		<footer>
-			<p>Copyright &copy; MegaCraft 2021</p>
+			<p>Copyright &copy; MegaCraft 2022 - <a href="https://discord.gg/xHtqBcCD" target="_blank">Discord</a> - <a href="apoiadores.html" >Apoiadores</a> - <a href="equipe.html" >Equipe</a></p>
 			<!-- Remove this part below if you want! -->
 			<p style="padding-right: 30px;">Desenvolvido por <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
 		</footer>
