--- a/apoiadores.html
+++ b/apoiadores.html
@@ -163,7 +163,7 @@
 		</div>
 
 		<footer>
-			<p>Copyright &copy; MegaCraft 2021</p>
+			<p>Copyright &copy; MegaCraft 2022 - <a href="https://discord.gg/xHtqBcCD" target="_blank">Discord</a> - <a href="apoiadores.html" >Apoiadores</a> - <a href="equipe.html" >Equipe</a></p>
 			<!-- Remove this part below if you want! -->
 			<p style="padding-right: 30px;">Desenvolvido por <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
 		</footer>
