--- a/contato.html
+++ b/contato.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-	<title>Megacraft - Skyblock Server - Official Website</title>
-	<meta name="description" content="Megacraft - Skyblock World - IP 'megacraftmc.com.br'.">
-	<meta name="keywords" content="Megacraft, megacraft.com.br, Minecraft Server, Minecraft, Game, Skyblock, Sky, Play, Oficial">
+	<title>Megacraft - Servidor Minecraft Skyblock!</title>
+	<meta name="description" content="Megacraft - O Maior Skyblock do Brasil! - IP 'megacraftmc.com.br'.">
+	<meta name="keywords" content="Megacraft, megacraftmc.com.br, Minecraft Server, Minecraft, Game, Skyblock, Sky, Play, Oficial">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:title" content="Megacraft - Skyblock World - Official Website">
+	<meta property="og:title" content="Megacraft - Servidor Minecraft Skyblock!">
 	<meta property="og:site_name" content="Megacraft">
-	<meta property="og:description" content="Megacraft - Skyblock World - IP 'megacraftmc.com.br'.">
-	<meta property="og:image" content="img/banner.jpg">
+	<meta property="og:description" content="Megacraft - O Maior Skyblock do Brasil! - IP 'megacraftmc.com.br'.">
+	<meta property="og:image" content="img/mcbanner.jpg">
 	<meta property="og:url" content="https://bybilly.uk/">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta charset="utf-8">
