--- a/cores.html
+++ b/cores.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-	<title>Megacraft - Skyblock Server - Official Website</title>
-	<meta name="description" content="Megacraft - Skyblock World - IP 'megacraftmc.com.br'.">
-	<meta name="keywords" content="Megacraft, megacraft.com.br, Minecraft Server, Minecraft, Game, Skyblock, Sky, Play, Oficial">
+	<title>Megacraft - Servidor Minecraft Skyblock!</title>
+	<meta name="description" content="Megacraft - O Maior Skyblock do Brasil! - IP 'megacraftmc.com.br'.">
+	<meta name="keywords" content="Megacraft, megacraftmc.com.br, Minecraft Server, Minecraft, Game, Skyblock, Sky, Play, Oficial">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:title" content="Megacraft - Skyblock World - Official Website">
+	<meta property="og:title" content="Megacraft - Servidor Minecraft Skyblock!">
 	<meta property="og:site_name" content="Megacraft">
-	<meta property="og:description" content="Megacraft - Skyblock World - IP 'megacraftmc.com.br'.">
-	<meta property="og:image" content="img/banner.jpg">
+	<meta property="og:description" content="Megacraft - O Maior Skyblock do Brasil! - IP 'megacraftmc.com.br'.">
+	<meta property="og:image" content="img/mcbanner.jpg">
 	<meta property="og:url" content="https://bybilly.uk/">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta charset="utf-8">
@@ -37,6 +37,9 @@
 					<li><a href="regras.html" >Regras</a></li>
 					<li><a href="votar.html">Votar</a></li>
 					<li><a href="loja.html" >Loja</a></li>
+					<li><a href="doar.html" >Doar</a></li>
+					<li><a href="cores.html" >Cores</a></li>
+					<li><a href="contato.html" >Contato</a></li>
 					<li><a href="suporte.html" >Suporte</a></li>
 				</ul>
 			</div>
@@ -198,7 +201,7 @@
 		</p>	
 		</div>
 		<footer>
-			<p>Copyright &copy; MegaCraft 2022 - <a href="https://discord.gg/xHtqBcCD" target="_blank">Discord</a> - <a href="apoiadores.html" >Apoiadores</a> - <a href="equipe.html" >Equipe</a></p>
+			<p>Copyright &copy; MegaCraft 2022<br /><a href="https://discord.gg/xHtqBcCD" target="_blank">Discord</a> - <a href="apoiadores.html" >Apoiadores</a> - <a href="equipe.html" >Equipe</a></p>
 			<!-- Remove this part below if you want! -->
 			<p style="padding-right: 30px;">Desenvolvido por <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
 		</footer>
