--- a/loja.html
+++ b/loja.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-	<title>Megacraft - Skyblock Server - Official Website</title>
-	<meta name="description" content="Megacraft - Skyblock World - IP 'megacraftmc.com.br'.">
-	<meta name="keywords" content="Megacraft, megacraft.com.br, Minecraft Server, Minecraft, Game, Skyblock, Sky, Play, Oficial">
+	<title>Megacraft - Servidor Minecraft Skyblock!</title>
+	<meta name="description" content="Megacraft - O Maior Skyblock do Brasil! - IP 'megacraftmc.com.br'.">
+	<meta name="keywords" content="Megacraft, megacraftmc.com.br, Minecraft Server, Minecraft, Game, Skyblock, Sky, Play, Oficial">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:title" content="Megacraft - Skyblock World - Official Website">
+	<meta property="og:title" content="Megacraft - Servidor Minecraft Skyblock!">
 	<meta property="og:site_name" content="Megacraft">
-	<meta property="og:description" content="Megacraft - Skyblock World - IP 'megacraftmc.com.br'.">
-	<meta property="og:image" content="img/banner.jpg">
+	<meta property="og:description" content="Megacraft - O Maior Skyblock do Brasil! - IP 'megacraftmc.com.br'.">
+	<meta property="og:image" content="img/mcbanner.jpg">
 	<meta property="og:url" content="https://bybilly.uk/">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta charset="utf-8">
@@ -34,9 +34,9 @@
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
 					<li><a href="votar.html" >Votar</a></li>
-					<li><a href="loja.html" >loja</a></li>
 					<li><a href="regras.html" >regras</a></li>
 					<li><a href="contato.html" >Contato</a></li>
+					<li><a href="https://megacraftservermc.tebex.io" target="_blank">loja</a></li>
 				</ul>
 			</div>
 		</header>
@@ -48,35 +48,21 @@
 				</div></div><br /><br />
 <div align="left">
 
-<h3>🔥 Escolha uma das categorias acima e efetue sua doação.</h3>
-
 <h2>✨ Por que precisamos das doações?</h2>
 
 <p>Manter um servidor de minecraft online não é barato. Existe vários custos mensais envolvidos, hospedagem , compra de plugins e pagamento de serviços. Para hospedar nosso servidor, possuímos uma máquina dedicada e hospedada no Brasil, nossa máquina VPS está em constante atualização de hardware, também possuímos link dedicado de internet de 1gb/s .</p>
-
-
 
 <h2>✨ O que eu posso fazer para apoiar o servidor?</h2>
 
 <p>Literalmente qualquer compra realizada na loja ajuda a manter o servidor online e sempre melhorando! As compras realizadas aqui não são pelos serviços prestados e sim uma doação para ajudar o servidor a continuar online, em troca, nada mais justo você receber prêmios por isso, certo?</p>
 
-
-
 <h2>💖 Sua doação é o que mantém o servidor online!</h2>
-
-
-
-
-
 
 <p><img src="img/formas-de-pagamento.JPG" /></p>
 
-
-
 <p> Para utilizar Mercado Pago, PicPay e Pix entre em contato com a Staff!<br />
-	Todas as compras através de cartão de crédito/débito são liberadas na hora.</p>
-
-
+	Todas as compras através de cartão de crédito/débito são liberadas na hora.</p><br>
+	<p><strong>Para acessar a loja <a href="https://megacraftservermc.tebex.io" target="_blank">Clique aqui</a></strong></p>
 <br><br>
 Tire suas dúvidas com a Staff, clique aqui!
 <br><br>
@@ -94,7 +80,7 @@ Dúvidas? Acesse nosso discorde para suporte!
 		</p>	
 		</div></div>
 		<footer>
-			<p>Copyright &copy; MegaCraft 2022 - <a href="https://discord.gg/xHtqBcCD" target="_blank">Discord</a> - <a href="apoiadores.html" >Apoiadores</a> - <a href="equipe.html" >Equipe</a></p>
+			<p>Copyright &copy; MegaCraft 2022<br /><a href="https://discord.gg/xHtqBcCD" target="_blank">Discord</a> - <a href="apoiadores.html" >Apoiadores</a> - <a href="equipe.html" >Equipe</a></p>
 			<!-- Remove this part below if you want! -->
 			<p style="padding-right: 30px;">Desenvolvido por: <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
 		</footer>
