--- a/votar.html
+++ b/votar.html
@@ -45,9 +45,11 @@
 					<h2 id="vote-section">Vote for MEGACRAFT</h1></h2>
 					<h3>A cada voto você recebe chaves para abrir as coisas no spawn e muitas recompensas!<br />
 					Quando mais você votar mais recompensas você vai ganhar. <br />
-					A cada <font style="color:Tomato;">10 votos</font> você recebe 5 Chaves <font style="color:Tomato;">Voto</font> e 1k de Money.<br />
-					A cada <font style="color:Tomato;">20 votos</font> você recebe 10 Chaves <font style="color:Tomato;">Voto</font> e 2k de Money.<br />
-					A cada <font style="color:Tomato;">40 votos</font> você recebe 15 Chaves <font style="color:Tomato;">Voto</font> e 4k de Money.<br />
+					A cada <font style="color:#8B0000;">10 votos</font> você recebe uma chave <font style="color:#8B0000;">Normal</font><br />
+					A cada <font style="color:#8B0000;">20 votos</font> você recebe uma chave <font style="color:#8B0000;">Rara</font><br />
+					A cada <font style="color:#8B0000;">40 votos</font> você recebe uma chave <font style="color:#8B0000;">Épica</font><br />
+					A cada <font style="color:#8B0000;">80 votos</font> você recebe uma chave <font style="color:#8B0000;">Lendária</font><br />
+						
 				</div>
 			</div>
 				<div class="vote-container">
