--- a/votar.html
+++ b/votar.html
@@ -43,8 +43,8 @@
 			<div class="about-staff">
 				<div class="vote-section">
 					<h2 id="vote-section">Vote for MEGACRAFT</h1></h2>
-					<h3>A cada voto você recebe uma chave <font style="color:#8B0000;">Voto</font> para abria caixa voto no spawn!<br />
-					Quando mais você votar mais recompensas você vai ganhar. <br />
+					<h3>A cada voto você recebe uma chave <font style="color:#8B0000;">Voto</font> para abrir a caixa voto no spawn!<br />
+					<i>Quando mais você votar mais recompensas você vai ganhar.<i> <br />
 					A cada <font style="color:#8B0000;">10 votos</font> você recebe uma chave <font style="color:#8B0000;">Normal</font><br />
 					A cada <font style="color:#8B0000;">20 votos</font> você recebe uma chave <font style="color:#8B0000;">Rara</font><br />
 					A cada <font style="color:#8B0000;">40 votos</font> você recebe uma chave <font style="color:#8B0000;">Épica</font><br />
