--- a/votar.html
+++ b/votar.html
@@ -44,7 +44,7 @@
 				<div class="vote-section">
 					<h2 id="vote-section">Vote for MEGACRAFT</h1></h2>
 					<h3>A cada voto você recebe uma chave <font style="color:#8B0000;">Voto</font> para abrir a caixa voto no spawn!<br />
-					<i>Quando mais você votar mais recompensas você vai ganhar.<i> <br />
+					<strong><i>Quando mais você votar mais recompensas você vai ganhar.<i></strong><br />
 					A cada <font style="color:#8B0000;">10 votos</font> você recebe uma chave <font style="color:#8B0000;">Normal</font><br />
 					A cada <font style="color:#8B0000;">20 votos</font> você recebe uma chave <font style="color:#8B0000;">Rara</font><br />
 					A cada <font style="color:#8B0000;">40 votos</font> você recebe uma chave <font style="color:#8B0000;">Épica</font><br />
