--- a/votar.html
+++ b/votar.html
@@ -42,8 +42,8 @@
 		<div class="main-content">
 			<div class="about-staff">
 				<div class="vote-section">
-					<h2 id="vote-section">Vote for MEGACRAFT</h1></h2>
-					<h3>A cada voto você recebe uma chave <font style="color:#8B0000;">Voto</font> para abrir a caixa voto no spawn!<br />
+					<h2 id="vote-section">Vote for MEGACRAFT</h2>
+					<h3>A cada voto você recebe uma chave <font style="color:#8B0000;">Voto</font> para abrir a caixa voto no spawn!</h3>
 					<strong><i>Quando mais você votar mais recompensas você vai ganhar.<i></strong><br />
 					A cada <font style="color:#8B0000;">10 votos</font> você recebe uma chave <font style="color:#8B0000;">Normal</font><br />
 					A cada <font style="color:#8B0000;">20 votos</font> você recebe uma chave <font style="color:#8B0000;">Rara</font><br />
