--- a/apoiadores.html
+++ b/apoiadores.html
@@ -47,7 +47,7 @@
 			<div class="about-staff">
 				<div class="abt-epr">
 					<h1 class="fade">HALL DA FAMA</h1>
-					<p>As contribuições são de grande importancia para manter o nosso servidor de pé, cada VIP comprado ajuda a pagar os custos de host do servidor, VPS do servidor, hospedagem do site, dominio do site, plugins que estamos sempre comprado para melhorar a qualidade e diversão do servidor entre outros gastos que temos!</br></br><b><i>O meu muito obrigado aos que estão contribuindo.</br></br> Grande Abraço do TEK</i></b></b></b>.</p>
+					<p>As contribuições são de grande importancia para manter o nosso servidor de pé, cada VIP comprado ajuda a pagar os custos como VPS do servidor, hospedagem do site, dominio do site, plugins que estamos sempre comprado para melhorar a qualidade e diversão do servidor entre outros gastos que temos mensalmente!</br></br><b><i>O meu muito obrigado aos que estão contribuindo.</br></br> Grande Abraço do TEK</i></b></b></b>.</p>
 				</div>
 				<div class="prev-epr">
 
