--- a/votar.html
+++ b/votar.html
@@ -43,12 +43,12 @@
 			<div class="about-staff">
 				<div class="vote-section">
 					<h2 id="vote-section">Vote for MEGACRAFT</h2>
-					<h3>A cada voto você recebe uma chave <font style="color:#8B0000;">Voto</font> para abrir a caixa voto no spawn!<br /><br />
-					<strong><i>Quando mais você votar mais recompensas você vai ganhar.<i></strong><br /><br />
+					<h3>A cada voto você recebe uma chave <font style="color:#8B0000;">Voto</font> para abrir a caixa voto no spawn!<br />
+					<strong><i>Quando mais você votar mais recompensas você vai ganhar.<i></strong><br />
 					A cada <font style="color:#8B0000;">10 votos</font> você recebe uma chave <font style="color:#8B0000;">Normal</font><br />
 					A cada <font style="color:#8B0000;">20 votos</font> você recebe uma chave <font style="color:#8B0000;">Rara</font><br />
 					A cada <font style="color:#8B0000;">40 votos</font> você recebe uma chave <font style="color:#8B0000;">Épica</font><br />
-					A cada <font style="color:#8B0000;">80 votos</font> você recebe uma chave <font style="color:#8B0000;">Lendária</font><br /></h3>
+					A cada <font style="color:#8B0000;">80 votos</font> você recebe uma chave <font style="color:#8B0000;">Lendária</font></h3>
 						
 				</div>
 			</div>
