--- a/votar.html
+++ b/votar.html
@@ -78,7 +78,7 @@
 					<a href="https://minecraft-server.net/vote/megacraftmc/"  target="_blank"><button class="vote-btn">Minecraft-Server.net</button></a></h2>
 				</div>			
 			</div>
-						<h3><font style="color:#EAC117;">Os votos são válidos apenas se o jogador estiver online no servidor.</font></h3><br />
+						<h3><font style="color:#8B0000;">Os votos são válidos apenas se o jogador estiver online no servidor.</font></h3><br />
 
 		</div>
 <br />
