--- a/votar.html
+++ b/votar.html
@@ -39,6 +39,17 @@
 				</ul>
 			</div>
 		</header>
+		
+		<div id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+		
 		<div class="main-content">
 			<div class="about-staff">
 				<div class="vote-section">
